feat: implementing product
